# ai-academy

./: LICENSE  README.md  app.py  example.env  pyproject.toml  requirements.txt
.devcontainer/: README.md  devcontainer.json  setup.sh
.devcontainer/debian-based/: devcontainer.json
.python-image-based.devcontainer/: README.md  setup.sh
notebooks/: 01_llm_start.ipynb
