[project]
name = "github-models-project"
version = "0.1.0"
description = "LLM experimentation using GitHub Models and uv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-inference>=1.0.0b1",
    "azure-core",
    "ipykernel",
    "jupyter",
    "streamlit>=1.56.0",
]

